Finished with section hero.

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 </head>
 <body>
     <header class="header">
-        <a href="/index.html" class="header-logo link">Vaccine<span>Qu</span></a>  
+        <a href="/index.html" class="header-logo">Vaccine<span>Qu</span></a>  
         <nav class="header-nav">
-            <ul class="header-list list">
-                <li class="header-item"><a href="#" class="header-item-link link">Home</a></li>
-                <li class="header-item"><a href="#" class="header-item-link link">Schedule</a></li>
-                <li class="header-item"><a href="#" class="header-item-link link">Quota</a></li>
-                <li class="header-item"><a href="#" class="header-item-link link">Information</a></li>
+            <ul class="header-list">
+                <li class="header-item"><a href="#" class="header-item-link">Home</a></li>
+                <li class="header-item"><a href="#" class="header-item-link">Schedule</a></li>
+                <li class="header-item"><a href="#" class="header-item-link">Quota</a></li>
+                <li class="header-item"><a href="#" class="header-item-link">Information</a></li>
             </ul>
         </nav>      
-        <button type="button" class="header-button button">Call Center</button>
+        <button class="header-button button" type="button">Call Center</button>
     </header>
     <main class="main">
         <section class="hero">
@@ -31,33 +31,52 @@
                     <h1 class="hero-title">Get Your Vaccine, Get Your Health</h1>
                     <p class="hero-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour</p>
                     <div class="hero-button-container">
-                        <button type="button" class="first-hero-button button">Get Your Vaccine</button>
-                        <button type="button" class="second-hero-button button">Learn more</button>
+                        <button class="first-hero-button button" type="button">Get Your Vaccine</button>
+                        <button class="second-hero-button button" type="button">Learn more</button>
                     </div>
                 </div>
-                <div class="first-hero-image-container"></div>
+                <div class="first-hero-image-container">
+                    <div class="first-image"></div>
+                    <div class="second-image"></div>
+                    <div class="third-image"></div>
+                    <div class="fourth-image"></div>
+                    <div class="fifth-image"></div>
+                </div>
             </div>
             <div class="second-hero-container">
-                <ul class="first-hero-list list">
+                <ul class="first-hero-list">
                     <li class="first-hero-item">
                         <h2 class="first-hero-item-title">Sinovac</h2>
                         <p class="first-hero-item-text">Necessary making this</p>
-                        <button class="first-hero-item-button button">Get Vaccine</button>
+                        <button class="first-hero-item-button button" type="button">Get Vaccine</button>
                     </li>
                     <li class="first-hero-item">
                         <h2 class="first-hero-item-title">Astrazeneca</h2>
                         <p class="first-hero-item-text">Necessary making this</p>
-                        <button class="first-hero-item-button button">Get Vaccine</button>
+                        <button class="first-hero-item-button button" type="button">Get Vaccine</button>
                     </li>
                     <li class="first-hero-item">
                         <h2 class="first-hero-item-title">Sinopahrm</h2>
                         <p class="first-hero-item-text">Necessary making this</p>
-                        <button class="first-hero-item-button button">Get Vaccine</button>
+                        <button class="first-hero-item-button button" type="button">Get Vaccine</button>
                     </li>
                 </ul>
-                <div class="second-hero-image-container"></div>
+                <div class="second-hero-image-container">
+                    <div class="one-image"></div>
+                    <div class="two-image"></div>
+                    <div class="three-image"></div>
+                    <div class="four-image"></div>
+                    <div class="five-image"></div>
+                    <div class="six-image"></div>
+                    <div class="seven-image"></div>
+                    <div class="eigth-image"></div>
+                    <div class="nine-image"></div>
+                    <div class="ten-image"></div>
+                    <div class="eleven-image"></div>
+                    <div class="twelve-image"></div>
+                </div>
             </div>
-            <ul class="second-hero-list list">
+            <ul class="second-hero-list">
                 <li class="second-hero-item">
                     <p class="second-hero-text">VACCINESIN</p>
                 </li>
@@ -71,7 +90,6 @@
                     <p class="second-hero-text">SimpAcine</p>
                 </li>
             </ul>
-            
         </section>
         <section></section>
         <section></section>
