Working on section schedule.

--- a/index.html
+++ b/index.html
@@ -91,7 +91,35 @@
                 </li>
             </ul>
         </section>
-        <section></section>
+        <section class="schedule">
+            <h2 class="schedule-title">Schedule Vaccination</h2>
+            <div class="schedule-block">
+                <ul class="schedule-list">
+                    <li class="schedule-item">
+                        <div class="schedule-item-block">
+                            <img src="./images/location-image.svg" alt="Location" class="schedule-item-icon">
+                            <h3 class="schedule-item-title">Location</h3>
+                        </div>
+                        <input type="text" class="schedule-item-input" placeholder="Jakarta, Indonesia">
+                    </li>
+                    <li class="schedule-item">
+                        <div class="schedule-item-block">
+                            <img src="./images/date-image.svg" alt="Date" class="schedule-item-icon">
+                            <h3 class="schedule-item-title">Date</h3>
+                        </div>
+                        <input type="text" class="schedule-item-input" placeholder="25 June, 2021">
+                    </li>
+                    <li class="schedule-item">
+                        <div class="schedule-item-block">
+                            <img src="./images/vacine-type-image.svg" alt="vacine-type" class="schedule-item-icon">
+                            <h3 class="schedule-item-title">Vaccine Type</h3>
+                        </div>
+                        <input type="text" class="schedule-item-input" placeholder="Cinovac">
+                    </li>
+                </ul>
+                <button class="schedule-button button" type="button">Find</button>
+            </div>
+        </section>
         <section></section>
         <section></section>
         <section></section>
