Finised section schedule

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
                     <li class="schedule-item">
                         <div class="schedule-item-block">
                             <img src="./images/location-image.svg" alt="Location" class="schedule-item-icon">
+                            <div class="background-icon"></div>
                             <h3 class="schedule-item-title">Location</h3>
                         </div>
                         <input type="text" class="schedule-item-input" placeholder="Jakarta, Indonesia">
@@ -105,6 +106,7 @@
                     <li class="schedule-item">
                         <div class="schedule-item-block">
                             <img src="./images/date-image.svg" alt="Date" class="schedule-item-icon">
+                            <div class="background-icon"></div>
                             <h3 class="schedule-item-title">Date</h3>
                         </div>
                         <input type="text" class="schedule-item-input" placeholder="25 June, 2021">
@@ -112,6 +114,7 @@
                     <li class="schedule-item">
                         <div class="schedule-item-block">
                             <img src="./images/vacine-type-image.svg" alt="vacine-type" class="schedule-item-icon">
+                            <div class="background-icon"></div>
                             <h3 class="schedule-item-title">Vaccine Type</h3>
                         </div>
                         <input type="text" class="schedule-item-input" placeholder="Cinovac">
