Done section importance

--- a/index.html
+++ b/index.html
@@ -97,24 +97,24 @@
                 <ul class="schedule-list">
                     <li class="schedule-item">
                         <div class="schedule-item-block">
-                            <img src="./images/location-image.svg" alt="Location" class="schedule-item-icon">
-                            <div class="background-icon"></div>
+                            <img src="./images/location-image.svg" alt="Location" class="schedule-item-icon" width="14" height="18">
+                            <div class="schedule-background-icon"></div>
                             <h3 class="schedule-item-title">Location</h3>
                         </div>
                         <input type="text" class="schedule-item-input" placeholder="Jakarta, Indonesia">
                     </li>
                     <li class="schedule-item">
                         <div class="schedule-item-block">
-                            <img src="./images/date-image.svg" alt="Date" class="schedule-item-icon">
-                            <div class="background-icon"></div>
+                            <img src="./images/date-image.svg" alt="Date" class="schedule-item-icon" width="16" height="18">
+                            <div class="schedule-background-icon"></div>
                             <h3 class="schedule-item-title">Date</h3>
                         </div>
                         <input type="text" class="schedule-item-input" placeholder="25 June, 2021">
                     </li>
                     <li class="schedule-item">
                         <div class="schedule-item-block">
-                            <img src="./images/vacine-type-image.svg" alt="vacine-type" class="schedule-item-icon">
-                            <div class="background-icon"></div>
+                            <img src="./images/vacine-type-image.svg" alt="vacine-type" class="schedule-item-icon" width="14" height="14">
+                            <div class="schedule-background-icon"></div>
                             <h3 class="schedule-item-title">Vaccine Type</h3>
                         </div>
                         <input type="text" class="schedule-item-input" placeholder="Cinovac">
@@ -123,7 +123,36 @@
                 <button class="schedule-button button" type="button">Find</button>
             </div>
         </section>
-        <section></section>
+        <section class="importance">
+            <h2 class="importance-title">Why Vaccine Is Important?</h2>
+            <p class="importance-text">Combined with a handful of model sentence structures, to generate always free from repetition injected.</p>
+            <ul class="importance-list">
+                <li class="importance-item">
+                    <img src="./images/attention-image.svg" alt="Attention" class="importance-icon" width="20" height="20">
+                    <div class="importance-background-icon"></div>
+                    <h3 class="importance-item-title">Prevent covid 19 virus</h3>
+                    <p class="importance-item-text">Model sentence structures, to generate Lorem which looks reasonable</p>
+                </li>
+                <li class="importance-item">
+                    <img src="./images/alert-image.svg" alt="Alert" class="importance-icon" width="19" height="17">
+                    <div class="importance-background-icon"></div>
+                    <h3 class="importance-item-title">Protect others</h3>
+                    <p class="importance-item-text">Model sentence structures, to generate Lorem which looks reasonable</p>
+                </li>
+                <li class="importance-item">
+                    <img src="./images/cross-image.svg" alt="Cross" class="importance-icon" width="20" height="18">
+                    <div class="importance-background-icon"></div>
+                    <h3 class="importance-item-title">Stop the spread of covid 19</h3>
+                    <p class="importance-item-text">Model sentence structures, to generate Lorem which looks reasonable</p>
+                </li>
+                <li class="importance-item">
+                    <img src="./images/society-image.svg" alt="Society" class="importance-icon" width="20" height="18">
+                    <div class="importance-background-icon"></div>
+                    <h3 class="importance-item-title">Protect the next generation</h3>
+                    <p class="importance-item-text">Model sentence structures, to generate Lorem which looks reasonable</p>
+                </li>
+            </ul>
+        </section>
         <section></section>
         <section></section>
     </main>
