Done section quota

--- a/index.html
+++ b/index.html
@@ -153,7 +153,39 @@
                 </li>
             </ul>
         </section>
-        <section></section>
+        <section class="quota">
+            <h2 class="quota-title">Get Vaccine Now</h2>
+            <p class="quota-text">Combined with a handful of model sentence structures,  generate always free from repetition injected.</p>
+            <div class="quota-block">
+                <ul class="quota-list">
+                    <li class="quota-item">
+                        <h3 class="quota-item-title">Full Name</h3>
+                        <input type="text" placeholder="Enter Your name" class="quota-item-input">
+                    </li>
+                    <li class="quota-item">
+                        <h3 class="quota-item-title">Email or phone number</h3>
+                        <input type="text" placeholder="Enter your email or number" class="quota-item-input">
+                    </li>
+                    <li class="quota-item">
+                        <h3 class="quota-item-title">Address</h3>
+                        <input type="text" placeholder="Full your Address" class="quota-item-input">
+                    </li>
+                    <li class="quota-item">
+                        <h3 class="quota-item-title">Disease history</h3>
+                        <input type="text" placeholder="Enter diese history" class="quota-item-input">
+                    </li>
+                    <li class="quota-item">
+                        <h3 class="quota-item-title">Level Vaccination</h3>
+                        <input type="" placeholder="Choose Level" class="quota-item-input">
+                    </li>
+                    <li class="quota-item">
+                        <h3 class="quota-item-title">Near Vaccination Location</h3>
+                        <input type="text" placeholder="Indonesia" class="quota-item-input">
+                    </li>
+                </ul>
+                <button type="button" class="quota-button button">Vaccine Now</button>
+            </div>
+        </section>
         <section></section>
     </main>
     <footer></footer>
