Done section quota

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li class="header-item"><a href="#" class="header-item-link">Information</a></li>
             </ul>
         </nav>      
-        <button class="header-button button" type="button">Call Center</button>
+        <button class="header-button" type="button">Call Center</button>
     </header>
     <main class="main">
         <section class="hero">
@@ -31,8 +31,8 @@
                     <h1 class="hero-title">Get Your Vaccine, Get Your Health</h1>
                     <p class="hero-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour</p>
                     <div class="hero-button-container">
-                        <button class="first-hero-button button" type="button">Get Your Vaccine</button>
-                        <button class="second-hero-button button" type="button">Learn more</button>
+                        <button class="first-hero-button" type="button">Get Your Vaccine</button>
+                        <button class="second-hero-button" type="button">Learn more</button>
                     </div>
                 </div>
                 <div class="first-hero-image-container">
@@ -48,17 +48,17 @@
                     <li class="first-hero-item">
                         <h2 class="first-hero-item-title">Sinovac</h2>
                         <p class="first-hero-item-text">Necessary making this</p>
-                        <button class="first-hero-item-button button" type="button">Get Vaccine</button>
+                        <button class="first-hero-item-button" type="button">Get Vaccine</button>
                     </li>
                     <li class="first-hero-item">
                         <h2 class="first-hero-item-title">Astrazeneca</h2>
                         <p class="first-hero-item-text">Necessary making this</p>
-                        <button class="first-hero-item-button button" type="button">Get Vaccine</button>
+                        <button class="first-hero-item-button" type="button">Get Vaccine</button>
                     </li>
                     <li class="first-hero-item">
                         <h2 class="first-hero-item-title">Sinopahrm</h2>
                         <p class="first-hero-item-text">Necessary making this</p>
-                        <button class="first-hero-item-button button" type="button">Get Vaccine</button>
+                        <button class="first-hero-item-button" type="button">Get Vaccine</button>
                     </li>
                 </ul>
                 <div class="second-hero-image-container">
@@ -120,7 +120,7 @@
                         <input type="text" class="schedule-item-input" placeholder="Cinovac">
                     </li>
                 </ul>
-                <button class="schedule-button button" type="button">Find</button>
+                <button class="schedule-button" type="button">Find</button>
             </div>
         </section>
         <section class="importance">
@@ -183,10 +183,62 @@
                         <input type="text" placeholder="Indonesia" class="quota-item-input">
                     </li>
                 </ul>
-                <button type="button" class="quota-button button">Vaccine Now</button>
+                <button type="button" class="quota-button">Vaccine Now</button>
             </div>
         </section>
-        <section></section>
+        <section class="information">
+            <div class="information-block-image"></div>
+            <div class="information-block-text">
+                <h2 class="information-title">Emergency Contact</h2>
+                <p class="information-text">Combined with a handful of model sentence structures, generate always free from repetition injected.</p>
+                <ul class="information-list">
+                    <li class="information-item">
+                        <div class="information-item-block-image">
+                            <img src="./images/call-image.svg" alt="Call" class="information-icon" width="18" height="18">
+                            <div class="information-background-icon"></div>
+                        </div>
+                        <div class="information-item-block-text">
+                            <h3 class="information-item-title">Call</h3>
+                            <p class="information-item-text">0822 - xxx - xxx</p>
+                            <button class="information-item-button">Call Now</button>
+                        </div>
+                    </li>
+                    <li class="information-item">
+                        <div class="information-item-block-image">
+                            <img src="./images/chat-image.svg" alt="Chat" class="information-icon" width="18" height="18">
+                            <div class="information-background-icon"></div>
+                        </div>
+                        <div class="information-item-block-text">
+                            <h3 class="information-item-title">Chat</h3>
+                            <p class="information-item-text">Type fast chat</p>
+                            <button class="information-item-button">Chat</button>
+                        </div>
+                    </li>
+                    <li class="information-item">
+                        <div class="information-item-block-image">
+                            <img src="./images/map-image.svg" alt="Map" class="information-icon" width="20" height="20">
+                            <div class="information-background-icon"></div>
+                        </div>
+                        <div class="information-item-block-text">
+                            <h3 class="information-item-title">Go to Near Location</h3>
+                            <p class="information-item-text">You can use emergency</p>
+                            <button class="information-item-button">Video Call</button>
+                        </div>
+                    </li>
+                    <li class="information-item">
+                        <div class="information-item-block-image">
+                            <img src="./images/email-image.svg" alt="Email" class="information-icon" width="20" height="16">
+                            <div class="information-background-icon"></div>
+                        </div>
+                        <div class="information-item-block-text">
+                            <h3 class="information-item-title">Email</h3>
+                            <p class="information-item-text">If you want update</p>
+                            <button class="information-item-button">Send Email</button>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
