Finished working on index.html and css for it

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <a href="/index.html" class="header-logo">Vaccine<span>Qu</span></a>  
         <nav class="header-nav">
             <ul class="header-list">
-                <li class="header-item"><a href="#" class="header-item-link">Home</a></li>
-                <li class="header-item"><a href="#" class="header-item-link">Schedule</a></li>
-                <li class="header-item"><a href="#" class="header-item-link">Quota</a></li>
-                <li class="header-item"><a href="#" class="header-item-link">Information</a></li>
+                <li class="header-item"><a href="/index.html" class="header-item-link">Home</a></li>
+                <li class="header-item"><a href="#schedule" class="header-item-link">Schedule</a></li>
+                <li class="header-item"><a href="#quota" class="header-item-link">Quota</a></li>
+                <li class="header-item"><a href="#information" class="header-item-link">Information</a></li>
             </ul>
         </nav>      
         <button class="header-button" type="button">Call Center</button>
@@ -91,7 +91,7 @@
                 </li>
             </ul>
         </section>
-        <section class="schedule">
+        <section class="schedule" id="schedule">
             <h2 class="schedule-title">Schedule Vaccination</h2>
             <div class="schedule-block">
                 <ul class="schedule-list">
@@ -153,7 +153,7 @@
                 </li>
             </ul>
         </section>
-        <section class="quota">
+        <section class="quota" id="quota">
             <h2 class="quota-title">Get Vaccine Now</h2>
             <p class="quota-text">Combined with a handful of model sentence structures,  generate always free from repetition injected.</p>
             <div class="quota-block">
@@ -186,7 +186,7 @@
                 <button type="button" class="quota-button">Vaccine Now</button>
             </div>
         </section>
-        <section class="information">
+        <section class="information" id="information">
             <div class="information-block-image"></div>
             <div class="information-block-text">
                 <h2 class="information-title">Emergency Contact</h2>
@@ -240,6 +240,39 @@
             </div>
         </section>
     </main>
-    <footer></footer>
+    <footer class="footer">
+        <div class="footer-logo-block">
+            <a href="/index.html" class="footer-logo">Vaccine<span>Qu</span></a>
+            <p class="footer-text">Combined with a handful of model sentence structures,  generate always free from repetition injected chunks as necessary.</p>
+        </div>
+        <ul class="footer-list">
+            <li class="footer-item">
+                <h2 class="footer-item-title">Menu</h2>
+                <ul class="footer-sub-list">
+                    <li class="footer-sub-item"><a href="/index.html" class="footer-sub-item-link">Home</a></li>
+                    <li class="footer-sub-item"><a href="#schedule" class="footer-sub-item-link">Schedule</a></li>
+                    <li class="footer-sub-item"><a href="#quota" class="footer-sub-item-link">Quota</a></li>
+                    <li class="footer-sub-item"><a href="#information" class="footer-sub-item-link">Information</a></li>
+                </ul>
+            </li>
+            <li class="footer-item">
+                <h2 class="footer-item-title">Vaccine Type</h2>
+                <ul class="footer-sub-list">
+                    <li class="footer-sub-item"><a href="" class="footer-sub-item-link">Sinovac</a></li>
+                    <li class="footer-sub-item"><a href="" class="footer-sub-item-link">Astarzon</a></li>
+                    <li class="footer-sub-item"><a href="" class="footer-sub-item-link">Sinopahm</a></li>
+                </ul>
+            </li>
+            <li class="footer-item">
+                <h2 class="footer-item-title">Emergency Contact</h2>
+                <ul class="footer-sub-list">
+                    <li class="footer-sub-item"><a href="" class="footer-sub-item-link">Whatsap</a></li>
+                    <li class="footer-sub-item"><a href="" class="footer-sub-item-link">Email</a></li>
+                    <li class="footer-sub-item"><a href="" class="footer-sub-item-link">Instagram</a></li>
+                    <li class="footer-sub-item"><a href="" class="footer-sub-item-link">Telefon Kantor</a></li>
+                </ul>
+            </li>
+        </ul>
+    </footer>
 </body>
 </html>
